# create-agentverse-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  _config.yml  configuration.md  index.md  installation.md  structure.md  usage.md
src/create_agentverse_agent/: __init__.py  cli.py  context.py  core.py  prompts.py  scaffold.py  templates.py
src/create_agentverse_agent/templates/: template..env.j2  template.Dockerfile.j2  template.Makefile.j2  template.README.md.j2  template.agent.py.j2  template.docker-compose.yml.j2  template.env.j2  template.main.py.j2  template.pyproject.toml.j2  template.requirements.txt.j2  template.test.py.j2
tests/create_agentverse_agent/: test_cli.py  test_context.py  test_core.py  test_init.py  test_prompts.py  test_scaffold.py  test_templates.py
