[project]
name = "create-agentverse-agent"
version = "0.1.1"
description = "A tool to create Agentverse compatible agents based on uAgents framework."
readme = "README.md"
authors = [
    { name = "Tejus Gupta", email = "tejus3131@tejusgupta.dev" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
create-agentverse-agent = "create_agentverse_agent:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # simplifications
  "RUF", # ruff-specific
]

ignore = [
  "E501", # line length (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
